--- a/application/admin/view/user/edit.html
+++ b/application/admin/view/user/edit.html
@@ -13,9 +13,7 @@ header {
 		<input type="hidden" name="id" value="{$data.id}">
 		
 		<div class="layui-form-item">
-                <label class="layui-form-label">
-                    用户角色
-                </label>
+                <label class="layui-form-label">角&nbsp;&nbsp;&nbsp;色</label>
                 <div class="layui-input-block">
                     <select  value="{$data['group_id']}"  name="group_id" id='group_id'>
                         {php}
@@ -38,12 +36,12 @@ header {
 		    </div>
 		  </div>
 
-		<div class="layui-form-item">
+		<!-- <div class="layui-form-item">
 		    <label class="layui-form-label">邮&nbsp;&nbsp;&nbsp;箱</label>
 		    <div class="layui-input-block">
-		    <input type="text" id="email" value="{$data.email}" name="email" lay-verify="required|email" placeholder="请输入注册邮箱" autocomplete="off" class="layui-input">
+		    <input type="text" id="email" value="{$data.email}" name="email" placeholder="请输入注册邮箱" autocomplete="off" class="layui-input">
 		    </div>
-		</div>
+		</div> -->
 
 		<div class="layui-form-item">
 		    <label class="layui-form-label">密&nbsp;&nbsp;&nbsp;码</label>
