--- a/public/static/css/xadmin.css
+++ b/public/static/css/xadmin.css
@@ -294,7 +294,7 @@ xblock{
 	cursor: pointer;
 }
 .left-nav #nav li a cite{
-	font-size: 14px;
+	font-size: 12px;
 }
 
 .left-nav #nav li .sub-menu{
@@ -414,7 +414,12 @@ xblock{
 	height: 100%;
 
 }
-
+.layui-tab-title li{
+	font-size: 12px;
+}
+.layui-table td, .layui-table th{
+	font-size: 12px;
+}
 .welcome-footer{padding: 30px 0; line-height: 30px; text-align: center; background-color: #eee; color: #666; font-weight: 300;}
 body .layui-layout-admin .footer-demo{height: auto; padding: 15px 0; line-height: 26px;}
 .welcome-footer a{padding: 0 5px;}
