--- a/application/admin/view/auth/index.html
+++ b/application/admin/view/auth/index.html
@@ -1,8 +1,8 @@
 {include file="public/head"}
     <body>
     <div class="x-body" >
-        <button class="layui-btn layui-btn-small " onclick="x_admin_show('添加菜单','showAdd.html',500,460)"></i>添加菜单</button>
-        <button onclick="javascript:location.reload()" class="layui-btn layui-btn-small">刷新</button>
+        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加菜单','showAdd.html',500,460)"></i>添加菜单</button>
+        <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
         <span class="x-right" style="line-height:40px">共有数据:10条</span>
 
     <table class="layui-table">
@@ -36,9 +36,9 @@
                                 </td>
                                 <td> <!--<button type="button" class="btn btn-success">添加子菜单</button> <button type="button" class="btn btn-primary">编辑</button> <button type="button" class="btn btn-danger" onClick="delcfm('{:url(\'admin/menu/del\',[\'id\' => $vo[\'id\']])}','{$vo.title}')">删除</button>-->
                                     <button type="button" onclick="x_admin_show('编辑菜单',
-                                    'showEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-mini">编辑
+                                    'showEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
                                     </button>
-                                    <button type="button" onClick="deleteAuthRule({$vo.id})" class="layui-btn layui-btn-mini layui-btn-danger">删除</button>
+                                    <button type="button" onClick="deleteAuthRule({$vo.id})" class="layui-btn layui-btn-xs layui-btn-danger">删除</button>
                                 </td>
                             </tr>
                             {/volist}
