--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -86,7 +86,7 @@
                 {foreach name="v['children']" item="vs"}
                 <li>
                   <a _href="{:url($vs.name)}">
-                    <i class="layui-icon">&#xe602;</i>
+                    <i class="layui-icon">&#{$vs.icon};</i>
                     <cite> {$vs.title}</cite>
                   </a>
 
@@ -97,7 +97,7 @@
             {else/}
             <li>
               <a _href="{:url($v.name)}">
-                <i class="layui-icon">&#xe602;</i>
+                <i class="layui-icon">&#{$v.icon};</i>
                 <cite> {$v.title}</cite>
               </a>
             </li>
