--- a/application/admin/view/auth/role.html
+++ b/application/admin/view/auth/role.html
@@ -12,8 +12,8 @@
     <div class="x-body">
         <div   class="layui-row">
           <input id="role_name" name="role_name" style="height:25px;" placeholder="请输入角色名称">
-          <button style="margin-left: 10px;" class="layui-btn layui-btn-small " onclick="addRole()"></i>添加角色</button>
-          <button onclick="javascript:location.reload()" class="layui-btn layui-btn-small">刷新</button>
+          <button style="margin-left: 10px;" class="layui-btn layui-btn-sm " onclick="addRole()"></i>添加角色</button>
+          <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
           <span class="x-right" style="line-height:40px">共有数据:{$role->total()}条</span>
         </div>
     <table class="layui-table">
@@ -39,12 +39,12 @@
 
            </td> 
             <td>
-                <button class="layui-btn layui-btn-mini" onclick="x_admin_show('用户授权','showAuth.html?id={$vo.id}',500,350)">授权</button>
-                <button class="layui-btn layui-btn-mini" onclick="x_admin_show('角色编辑','showRoleEdit.html?id={$vo.id}',500,250)">编辑</button>
+                <button class="layui-btn layui-btn-xs" onclick="x_admin_show('用户授权','showAuth.html?id={$vo.id}',500,350)">授权</button>
+                <button class="layui-btn layui-btn-xs" onclick="x_admin_show('角色编辑','showRoleEdit.html?id={$vo.id}',500,250)">编辑</button>
                 {php}
                 if($vo['id']!=1){
                 {/php}
-                <button onclick="delRole(this,{$vo.id})" class="layui-btn layui-btn-mini layui-btn-danger">删除</button>
+                <button onclick="delRole(this,{$vo.id})" class="layui-btn layui-btn-xs layui-btn-danger">删除</button>
                 {php}}{/php}
              </td>
           </tr>
