--- a/public/static/css/xadmin.css
+++ b/public/static/css/xadmin.css
@@ -419,6 +419,7 @@ xblock{
 }
 .layui-table td, .layui-table th{
 	font-size: 12px;
+	text-align: center;
 }
 .welcome-footer{padding: 30px 0; line-height: 30px; text-align: center; background-color: #eee; color: #666; font-weight: 300;}
 body .layui-layout-admin .footer-demo{height: auto; padding: 15px 0; line-height: 26px;}
