--- a/application/admin/view/auth/add.html
+++ b/application/admin/view/auth/add.html
@@ -93,6 +93,7 @@
         </form>
     </div>
 </body>
+{include file='public/foot'}
 <script type="text/javascript">
 	var form = layui.form;
 	var layer = layui.layer;
@@ -145,5 +146,4 @@
 
 	});
 </script>
- 
-{include file='public/foot'}
+</html>
