--- a/application/admin/view/auth/addRole.html
+++ b/application/admin/view/auth/addRole.html
@@ -79,6 +79,7 @@
         </form>
     </div>
 </body>
+{include file='public/foot'}
 <script type="text/javascript">
 	var form = layui.form;
 	var layer = layui.layer;
@@ -131,5 +132,4 @@
 
 	});
 </script>
- 
-{include file='public/foot'}
+</html>
