--- a/application/admin/view/auth/auth.html
+++ b/application/admin/view/auth/auth.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="__module__/ztree/js/jquery-1.4.4.min.js"></script>
 <script type="text/javascript" src="__module__/ztree/js/jquery.ztree.core.js"></script>
 <script type="text/javascript" src="__module__/ztree/js/jquery.ztree.excheck.js"></script>
+{include file='public/foot'}
 <script type="text/javascript">
 $(function(){
         var tree = $("#tree");
@@ -84,4 +85,4 @@ $(function(){
 })
 
 </script>
-{include file="public/foot"}	
+</html>	
