--- a/application/admin/view/auth/edit.html
+++ b/application/admin/view/auth/edit.html
@@ -88,6 +88,7 @@
         </form>
     </div>
 </body>
+{include file='public/foot'}
 <script type="text/javascript">
     // $("#status").val(0);
 	var form = layui.form;
@@ -141,5 +142,4 @@
 
 	});
 </script>
- 
-{include file='public/foot'}
+</html>
