--- a/application/admin/view/auth/role.html
+++ b/application/admin/view/auth/role.html
@@ -58,6 +58,7 @@
         </div>
     </div>
 </body>
+{include file='public/foot'}
 <script>
 function addRole(){
   var role_name = $("#role_name").val();
@@ -107,4 +108,4 @@ function delRole(obj,id){
 }
 
 </script>
-{include file="public/foot"}
+</html>
