--- a/application/admin/view/auth/roleEdit.html
+++ b/application/admin/view/auth/roleEdit.html
@@ -40,6 +40,7 @@
         </form>
     </div>
 </body>
+{include file='public/foot'}
 <script type="text/javascript">
     var form = layui.form;
     var layer = layui.layer;
@@ -92,5 +93,4 @@
 
     });
 </script>
- 
-{include file='public/foot'}
+</html>
