--- a/application/admin/view/branch/add.html
+++ b/application/admin/view/branch/add.html
@@ -6,18 +6,18 @@
 		}
 	</style>
 	<div class="x-body">
-		<form class="layui-form" id='mainForm' method="post" action="addUser">
+		<div class="layui-form">
 			<div class="layui-form-item">
 				<label class="layui-form-label">名&nbsp;&nbsp;&nbsp;称</label>
 				<div class="layui-input-block">
-					<input type="text" id="name" name="name" lay-verify="required|name" autocomplete="off"
+					<input type="text" id="name" name="branch_name" lay-verify="required|branch_name" autocomplete="off"
 						placeholder="请输入分站名称" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
 				<label class="layui-form-label">拼&nbsp;&nbsp;&nbsp;音</label>
 				<div class="layui-input-block">
-					<input type="text" id="pinyin" name="pinyin" lay-verify="required|pinyin" autocomplete="off"
+					<input type="text" id="branch_pinyin" name="branch_pinyin" lay-verify="required|branch_pinyin" autocomplete="off"
 						placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
 				</div>
 			</div>
@@ -45,16 +45,16 @@
 			<div class="layui-form-item">
                 <label class="layui-form-label">状&nbsp;&nbsp;&nbsp;态</label>
                 <div class="layui-input-block">
-                  <input type="checkbox" name="switch" lay-skin="switch">
+                  <input type="checkbox" name="status" lay-skin="switch" lay-text="开启|关闭" value="1">
                 </div>
               </div>
 			<div class="layui-form-item">
 				<div class="layui-input-block">
-					<button style="margin-left: 20%" class="layui-btn" lay-submit="" lay-filter="toSubmit">提交</button>
+					<button class="layui-btn" lay-submit lay-filter="toSubmit">提交</button>
 					<button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
 				</div>
 			</div>
-		</form>
+		</div>
 	</div>
 </body>
 {include file='public/foot'}
@@ -63,125 +63,82 @@ layui.use(['form','layer'], function(){
   	var form = layui.form;
   	var layer = layui.layer;
   	form.verify({
-		name: function (value) {
+		/* name: function (value) {
 			if (value.length < 5) {
 				return '用户名至少得5个字符啊';
 			}
-		}
+		} */
 	});
-	/*
-	* 监听角色选择
-	*/
-	form.on('select(group)',function(data){
-		if(data.value != 1 && data.value != 144){
-			if(typeof($("#province").attr("lay-verify"))=="undefined"){
-				$('#province').attr('lay-verify','required');
-			}
-			if(typeof($("#city").attr("lay-verify"))=="undefined"){
-				$('#city').attr('lay-verify','required');
-			}
-			if(typeof($("#county").attr("lay-verify"))=="undefined"){
-				$('#county').attr('lay-verify','required');
-			}
-			$('#region').show();
-		}else{
-			$('#region').hide();
-			$('#province').removeAttr('lay-verify');
-			$('#city').removeAttr('lay-verify');
-			$('#county').removeAttr('lay-verify');
-		}
-	});
-	/*
-	* 监听省份选择
+	/**
+	 * 监听省份选择
 	*/
 	form.on('select(province)',function(data){
-		$.ajax({
-			url:"http://www.longjizhai1.com/api/region/index",
-			data:{'code':data.value,'type':'2'},
-			type:"post",
-			dataType:"json",
-			success:function(data){
-				var res = data.data;
-				if(data.code == 200){
-					if(res.length > 0){
-						var option = '<option value="">请选择市</option>';
-						res.forEach(function(v,i){
-							option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
-						});
-						$('#city').html(option);
-						$('#county').html('<option value="">请选择区/县</option>');
-						form.render('select');
-					}
-				}else{
-					layer.msg(data.msg);
-				}
-			},
-			error:function(data){
-				layer.msg(data.msg);
-			}
-		});
+        $.post('/api/region/index', { 
+            code: data.value,
+            type:2 
+        }, function(data){
+            var res = data.data;
+            if(data.code == 0){
+                if(res.length > 0){
+                    var option = '<option value="">请选择市</option>';
+                    res.forEach(function(v,i){
+                        option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
+                    });
+                    $('#city').html(option);
+                    $('#county').html('<option value="">请选择区/县</option>');
+                    form.render('select');
+                }
+            }else{
+                layer.msg(data.msg);
+            }
+        },'json');
 	});
-	/*
-	* 监听城市选择
+	/**
+	 * 监听城市选择
 	*/
 	form.on('select(city)',function(data){
-		$.ajax({
-			url:"http://www.longjizhai1.com/api/region/index",
-			data:{'code':data.value,'type':'2'},
-			type:"post",
-			dataType:"json",
-			success:function(data){
-				var res = data.data;
-				if(data.code == 200){
-					if(res.length > 0){
-						var option = '<option value="">请选择区/县</option>';
-						res.forEach(function(v,i){
-							option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
-						});
-						$('#county').html(option);
-						form.render('select');
-					}
-				}else{
-					layer.msg(data.msg);
-				}
-			},
-			error:function(data){
-				layer.msg(data.msg);
-			}
-		});
+        $.post('/api/region/index', { 
+            code: data.value,
+            type:2 
+        }, function(data){
+            var res = data.data;
+            if(data.code == 0){
+                if(res.length > 0){
+                    var option = '<option value="">请选择区/县</option>';
+                    res.forEach(function(v,i){
+                        option += '<option value="'+v.region_code+'">'+v.region_name+'</option>';
+                    });
+                    $('#county').html(option);
+                    form.render('select');
+                }
+            }else{
+                layer.msg(data.msg);
+            }
+        },'json');
+	});
+	/**
+	 * 监听表单提交
+	*/
+	form.on('submit(toSubmit)',function(data){
+		var params = {
+				branch_name: data.field.branch_name,
+				branch_pinyin: data.field.branch_pinyin,
+				province: data.field.province,
+				city: data.field.city,
+				county: data.field.county,
+				status: data.field.status
+			};
+		$.post('/api/branch/addBranch', params, function(data){
+            var res = data.data;
+            if(data.code == 200){
+                x_admin_close();
+				parent.location.reload();
+            }else{
+                layer.msg(data.msg);
+            }
+		},'json');
+		return false;
 	});
 });
-	$(document).ready(function () {
-		var options = {
-			type: 'post',           //post提交
-			//url:'http://ask.tongzhuo100.com/server/****.php?='+Math.random(),   //url
-			dataType: "json",        //json格式
-			data: {},    //如果需要提交附加参数，视情况添加
-			clearForm: false,        //成功提交后，清除所有表单元素的值
-			resetForm: false,        //成功提交后，重置所有表单元素的值
-			cache: false,
-			async: false,          //同步返回
-			success: function (data) {
-				console.log(data);
-				if (data.code == 0) {
-					layer.msg(data.msg);
-				} else {
-					layer.msg(data.msg, { icon: 1, time: 500 }, function () {
-						$("#reset").click();
-						x_admin_close();
-						parent.location.reload();
-					});
-				}
-				//服务器端返回处理逻辑
-			},
-			error: function (XmlHttpRequest, textStatus, errorThrown) {
-				layer.msg('操作失败:服务器处理失败');
-			}
-		};
-		// bind form using 'ajaxForm' 
-		$('#mainForm').ajaxForm(options).submit(function (data) {
-			//无逻辑
-		});
-	});
 </script>
 </html>
