--- a/application/admin/view/branch/index.html
+++ b/application/admin/view/branch/index.html
@@ -2,84 +2,93 @@
 
 <body>
     <div class="x-body">
-        <button class="layui-btn  layui-btn-sm layui-btn-danger" onclick="delAll()">批量删除</button>
-        <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加分站','branchAdd.html',800,480)"></i>添加分站</button>
-        <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
-        <span class="x-right" style="line-height:40px">共有数据:<i class="i_count">{$branch->total()}</i>条</span>
-        <table class="layui-table">
-            <thead>
-                <tr>
-                    <th>
-                        <div class="header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
-                    </th>
-                    <th>ID</th>
-                    <th>分站名称</th>
-                    <th>域名前缀</th>
-                    <th>所属区域</th>
-                    <th>分站状态</th>
-                    <th>创建时间</th>
-                    <th>操作</th>
-            </thead>
-            <tbody>
-                {volist name="branch" id="vo"}
-                <tr>
-                    <td>
-                        <div class="layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
-                    </td>
-                    <td>{$vo.id}</td>
-                    <td>{$vo.branch_name}</td>
-                    <td>{$vo.branch_pinyin}</td>
-                    <td>{$vo.province_name}-{$vo.city_name}-{$vo.county_name}</td>
-                    <td>s</td>
-                    <td>{$vo.create_time}</td>
-                    <td>
-                        <button class="layui-btn layui-btn-xs" onclick="x_admin_show('编辑分站','edit.html?id={$vo.id}',800,480)">编辑</button>
-                        <button onclick="delUser(this,{$vo.id})" class="layui-btn layui-btn-xs layui-btn-danger">删除</button>
-                    </td>
-                </tr>
-                {/volist}
-            </tbody>
-        </table>
-        <div class="page">
-            <div>
-                {$branch->render()}
+        <table id="demo" lay-filter="test"></table>
+        <script type="text/html" id="toolbarDemo">
+            <div class="layui-btn-container">
+                <!-- <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
+                <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
+                <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button> -->
+                <button class="layui-btn  layui-btn-sm layui-btn-danger" onclick="delAll()">
+                    <i class="layui-icon layui-icon-delete"></i>批量删除
+                </button>
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加分站','branchAdd.html',800,480)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加分站
+                </button>
+                <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
+                    <i class="layui-icon layui-icon-refresh"></i>刷新
+                </button>
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索分站','search.html',800,480)">
+                    <i class="layui-icon layui-icon-search"></i>搜索
+                </button>
             </div>
-        </div>
+        </script>
     </div>
 </body>
 {include file="public/foot"}
 <script>
-    layui.use(['laydate', 'form'], function () {
-        var laydate = layui.laydate;
-        //执行一个laydate实例
-        laydate.render({
-            elem: '#start' //指定元素
+    var tableIns;
+    layui.use(['laydate', 'form', 'table'], function () {
+        var table = layui.table, laydate = layui.laydate, form = layui.form;
+        /**
+         * 请求数据
+        */
+        tableIns = table.render({
+            elem: '#demo'
+            , toolbar: '#toolbarDemo'
+            , defaultToolbar: []
+            , url: '/api/branch/index' //数据接口
+            , page: true //开启分页
+            , limit: 20
+            , id: 'test'
+            , cols: [
+                [ //表头
+                    { type: 'checkbox', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'branch_name', title: '分站名称', width: '15%' }
+                    , { field: 'branch_pinyin', title: '域名前缀', width: '15%' }
+                    , {
+                        field: 'area', title: '所属区域', width: '20%',
+                        templet: function (d) {
+                            return '<span>' + d.province_name + '--' + d.city_name + '--' + d.county_name + '</span>';
+                        }
+                    }
+                    , {
+                        field: 'order_price', title: '分站状态', width: '10%',
+                        templet: function (d) {
+                            var can_used = '<div class="layui-input-inline">' +
+                                '<input type="checkbox" name="switch" value="1" lay-skin="switch" lay-text="开启|关闭" lay-filter="cc" data-user-id="' + d.id + '" ' + (d.status == 0 ? '' : 'checked') + ' />' +
+                                '</div>';
+                            return can_used;
+                        }
+                    }
+                    , { field: 'create_time', title: '创建时间', width: '15%', }
+                    , {
+                        field: 'handle', title: '操作',
+                        templet: function (d) {
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑分站\',\'/admin/branch/branchEdit?id=' + d.id + '\',800,480);">编辑</button>' +
+                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            return handle;
+                        }
+                    }
+                ]
+            ]
         });
-        //执行一个laydate实例
-        laydate.render({
-            elem: '#end' //指定元素
+        /**
+         * 监听状态改变
+        */
+        form.on('switch(cc)', function (data) {
+            var t = data.elem;
+            var branch_id = $(t).attr('data-user-id');
+            $.post('/api/branch/updateStatus', { branch_id: branch_id }, function (j) {
+                if (j.code == '200') {
+                    layer.msg('设置成功');
+                }
+                if (j.code == '0') {
+                    layer.msg('设置失败');
+                }
+            },'json');
         });
     });
-    /*用户-停用*/
-    function member_stop(obj, id) {
-        layer.confirm('确认要停用吗？', function (index) {
-            if ($(obj).attr('title') == '启用') {
-                //发异步把用户状态进行更改
-                $(obj).attr('title', '停用')
-                $(obj).find('i').html('&#xe62f;');
-
-                $(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
-                layer.msg('已停用!', { icon: 5, time: 1000 });
-            } else {
-                $(obj).attr('title', '启用')
-                $(obj).find('i').html('&#xe601;');
-
-                $(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
-                layer.msg('已启用!', { icon: 5, time: 1000 });
-            }
-
-        });
-    }
     function delAll(argument) {
         var data = tableCheck.getData();
         layer.confirm('确认要全部删除吗？', function (index) {
@@ -88,21 +97,19 @@
             $(".layui-form-checked").not('.header').parents('tr').remove();
         });
     }
-    function delUser(obj, id) {
-        var count = $(".i_count")[0].innerText;
+    function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            //捉到所有被选中的，发异步进行删除
-            $.post("{:url('admin/user/deleteUser')}", { id: id }, function (data, textStatus, xhr) {
-                if (data.code == 1) {
-                    layer.msg(data.msg, { icon: 1, time: 1000 }, function () {
-                        $(obj).parents('tr').remove();
-                        $(".i_count").html(count - 1);
+            $.post('/api/branch/deleteBranch', { branch_id: id }, function (j) {
+                if(j.code == 200){
+                    layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
+                        location.reload();
                     });
-                } else {
-                    layer.msg(data.msg, { icon: 2, time: 1000 });
+                }else{
+                    layer.msg('删除失败', { icon: 2, time: 1000 });
                 }
-            });
+            },'json');
         });
     }
 </script>
+
 </html>
