--- a/application/admin/view/branch/add.html
+++ b/application/admin/view/branch/add.html
@@ -98,7 +98,7 @@ layui.use(['form','layer'], function(){
 	*/
 	form.on('select(city)',function(data){
         $.post('/api/region/index', { 
-            code: data.value,
+			code: data.value,
             type:2 
         }, function(data){
             var res = data.data;
@@ -128,7 +128,7 @@ layui.use(['form','layer'], function(){
 				county: data.field.county,
 				status: data.field.status
 			};
-		$.post('/api/branch/addBranch', params, function(data){
+		$.post('/admin/branch/addBranch', params, function(data){
             var res = data.data;
             if(data.code == 200){
                 x_admin_close();
