--- a/application/admin/view/branch/search.html
+++ b/application/admin/view/branch/search.html
@@ -12,7 +12,7 @@
                 <label class="layui-form-label">名&nbsp;&nbsp;&nbsp;称</label>
                 <div class="layui-input-block">
                     <input type="text" id="branch_name" name="branch_name" autocomplete="off"
-                        placeholder="请输入分站名称" class="layui-input">
+                        placeholder="请输入城市名称" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item" id="region">
